Initial commit to add my Angular world map app

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InteractiveWorldMap</title>
+  <title>Interactive World Map</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="relative overflow-x-auto bg-sky-400">
   <app-root></app-root>
+
+  
 </body>
 </html>
